using UnityEngine;

namespace Animations
{
    public static class CachedAnimatorPropertyNames
    {
        public static readonly int IsWalking = Animator.StringToHash("IsWalking");
        public static readonly int IsJumping  = Animator.StringToHash("IsJumping");
        public static readonly int Attack1 = Animator.StringToHash("Attack1");
    }
}